# neural-net

./: .gitignore  CMakeLists.txt
cmake/: Coverage.cmake
include/nn/: Network.hpp  tensor.hpp
src/: CMakeLists.txt  tensor.cpp
src/nn/: tensor.cpp
tests/: CMakeLists.txt  testTensor.cpp
